Starting to finish up my first lesson and building a data set :)

--- a/nbs/dl1/lesson2-download.ipynb
+++ b/nbs/dl1/lesson2-download.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "hide_input": false
    },
@@ -99,32 +99,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder = 'black'\n",
-    "file = 'urls_black.csv'"
+    "folder = '2017_350'\n",
+    "file = 'urls_2017_350.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder = 'teddys'\n",
-    "file = 'urls_teddys.csv'"
+    "folder = '2006_500'\n",
+    "file = 'urls_2006_500.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder = 'grizzly'\n",
-    "file = 'urls_grizzly.csv'"
+    "folder = '2010_500_SS'\n",
+    "file = 'urls_500_SS.csv'"
    ]
   },
   {
@@ -136,30 +136,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = Path('data/bears')\n",
+    "path = Path('data/shelbys')\n",
     "dest = path/folder\n",
     "dest.mkdir(parents=True, exist_ok=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[PosixPath('data/bears/urls_teddy.csv'),\n",
-       " PosixPath('data/bears/black'),\n",
-       " PosixPath('data/bears/urls_grizzly.csv'),\n",
-       " PosixPath('data/bears/urls_black.csv')]"
+       "[PosixPath('data/shelbys/2017_350'),\n",
+       " PosixPath('data/shelbys/2006_500'),\n",
+       " PosixPath('data/shelbys/2010_500_SS')]"
       ]
      },
-     "execution_count": null,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1399,9 +1398,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pytorch_fastai",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
