Guess I am done with head pose?

--- a/nbs/dl1/lesson3-imdb.ipynb
+++ b/nbs/dl1/lesson3-imdb.ipynb
@@ -51,7 +51,8 @@
     {
      "data": {
       "text/plain": [
-       "[PosixPath('/home/ubuntu/.fastai/data/imdb_sample/texts.csv')]"
+       "[PosixPath('/home/ubuntu/.fastai/data/imdb_sample/texts.csv'),\n",
+       " PosixPath('/home/ubuntu/.fastai/data/imdb_sample/data_save.pkl')]"
       ]
      },
      "execution_count": 3,
@@ -219,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +268,7 @@
        "      <td>negative</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>xxbos xxup the xxup shop xxup around xxup the xxup corner is one of the xxunk and most feel - good romantic comedies ever made . xxmaj there 's just no getting around that , and it 's hard to actually put one 's feeling for this film into words . xxmaj it 's not one of those films that tries too hard , nor does it come up with</td>\n",
+       "      <td>xxbos xxup the xxup shop xxup around xxup the xxup corner is one of the sweetest and most feel - good romantic comedies ever made . xxmaj there 's just no getting around that , and it 's hard to actually put one 's feeling for this film into words . xxmaj it 's not one of those films that tries too hard , nor does it come up with</td>\n",
        "      <td>positive</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -275,12 +276,12 @@
        "      <td>negative</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>xxbos xxmaj many neglect that this is n't just a classic due to the fact that it 's the first xxup 3d game , or even the first xxunk - up . xxmaj it 's also one of the first stealth games , one of the xxunk definitely the first ) truly claustrophobic games , and just a pretty well - rounded gaming experience in general . xxmaj with graphics</td>\n",
+       "      <td>xxbos xxmaj this film sat on my xxmaj xxunk for weeks before i watched it . i dreaded a self - indulgent xxunk flick about relationships gone bad . i was wrong ; this was an xxunk xxunk into the screwed - up xxunk of xxmaj new xxmaj yorkers . \\n \\n  xxmaj the format is the same as xxmaj max xxmaj xxunk ' \" xxmaj la xxmaj ronde</td>\n",
        "      <td>positive</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>xxbos i really wanted to love this show . i truly , honestly did . \\n \\n  xxmaj for the first time , gay viewers get their own version of the \" xxmaj the xxmaj bachelor \" . xxmaj with the help of his obligatory \" hag \" xxmaj xxunk , xxmaj james , a good looking , well - to - do thirty - something has the chance</td>\n",
-       "      <td>negative</td>\n",
+       "      <td>xxbos xxmaj many neglect that this is n't just a classic due to the fact that it 's the first xxup 3d game , or even the first xxunk - up . xxmaj it 's also one of the first stealth games , one of the xxunk definitely the first ) truly claustrophobic games , and just a pretty well - rounded gaming experience in general . xxmaj with graphics</td>\n",
+       "      <td>positive</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -327,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +346,7 @@
        " 'the']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,34 +364,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Text xxbos i 've seen a movie that s sort of like this , were a transsexual drugs woman and he then picks there nose with a knife and rips there nose to xxunk . he then xxunk there tongue and eats it . \n",
+       "Text xxbos i f you thought xxmaj sam xxmaj mendes ' first film , the much xxunk xxmaj american xxup beauty was a movie with style to spare , wait until you see his highly xxunk second effort , the xxunk grim 30 's gangster melodrama xxup road xxup to xxup perdition . xxmaj some critics have hailed this new movie as a worthy xxunk to xxup the xxup godfather , a xxunk judgment made by several reviewers taken with xxmaj mr. xxmaj mendes ' extraordinary technical xxunk . xxmaj if the mechanics of movie making are what make a picture great , then yes , xxup road xxup to xxup perdition is a distant cousin to xxup the xxup godfather in terms of what it achieves in cinematography , editing , music xxunk and sound . xxmaj what it does n't have is a resonance that all great stories and some very rare movies have that stay with the viewer long after the experience of reading or seeing it is over . xxmaj as with xxmaj american xxup beauty , there is a cold , xxunk feel to this movie , despite some very tense scenes involving paternal love , loyalty and betrayal . \n",
        " \n",
-       "  the most gruesome part of the movie is were he cuts there left eye out and starts dancing with it . he then starts to eat the woman naked . \n",
+       "  xxmaj this story of a hit man ( xxmaj tom xxmaj hanks ) and his relationship to a xxunk father - figure who is also his boss , an elderly xxmaj irish mob leader ( xxmaj paul xxmaj newman ) , seems to have been culled from xxunk gangster movies of years past . xxmaj the father / son motif that hangs over this picture is so heavy handed in its treatment that there is not much room for xxunk ; the entire enterprise has been very carefully wrought , and nearly all the dialog is delivered with an air of great xxunk : this is obviously a gangster film , hence the requisite amount of violence and bloodshed , but the film is nearly devoid of any humor to speak of ; only in scenes involving a young boy driving a getaway car in a xxunk edited montage is there any sense of xxunk to xxunk the xxunk sense of doom . \n",
        " \n",
-       "  ( i 'm not sure what the movies called but i know it 's a cult movie and that it was made in xxmaj germany ) . \n",
+       "  xxmaj that being said , i have nothing but the highest praise for the stunning look of this film ; indeed , it is not an overstatement to say that this is one of the most beautifully photographed and designed movies i have ever seen . xxmaj veteran cameraman xxmaj conrad xxmaj hall will very likely win another xxmaj oscar for his work here . xxmaj the production 's sets and costumes are just as exemplary ; in fact , the entire film is a technical marvel . xxmaj mr. xxmaj mendes continues to xxunk with his vivid use of color , and he and xxmaj mr. xxmaj hall again make very dramatic use of red blood splattered against pale colored walls , all the more effective and disconcerting due to the xxunk of blacks , blues and xxunk that xxunk the movie 's color scheme . \n",
        " \n",
-       "  anyway xxup the xxup nose xxup xxunk is fairly crap . \n",
-       " \n",
-       "  its a crap movie and the picture and volume quality is very rubbish . \n",
-       " \n",
-       "  please do n't waste you 're time buying and watching this movie its totally crap . \n",
-       " \n",
-       "  i prefer xxup day xxup of xxup the xxup woman also known as i xxup spit xxup on xxup your xxup grave ( its one of the best cult movies ever ) check out this link http : / / www.imdb.com / title / xxunk /"
+       "  xxmaj if i have failed to xxunk note the acting , it is not because the actors do not xxunk themselves xxunk ; everyone in the film is top notch , with special mention going to the two xxunk bad guys : xxmaj daniel xxmaj craig is the classic \" man you love to hate \" , the spoiled , xxunk son of xxmaj newman 's gangster father ; and an almost unrecognizable xxmaj jude xxmaj law as an especially slimy xxunk who goes on pursuit of xxmaj hanks and his son and figures very importantly in the film 's riveting second half . xxmaj but acting in a movie this dazzling is bound to take a back seat to the xxunk fireworks on display here . xxmaj if a xxmaj rolls - xxmaj xxunk was a movie , i 've no doubt it would look like xxup road xxup to xxup perdition ."
       ]
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.train_ds[0][0]"
+    "data.train_ds[1][0]"
    ]
   },
   {
@@ -402,16 +397,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([   2,   19,  189,  134,   13,   30,   20, 1058,  442,   14])"
+       "array([  2,  19,  60, 977,   9, 978,   5,   0,  10,  44])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +442,7 @@
        "PosixPath('/home/ubuntu/.fastai/data/imdb_sample')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,11 +453,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = (TextList.from_csv(path, 'texts.csv', cols='text')\n",
+    "doc(TextList.from_csv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = (TextList.from_csv(path, 'texts.csv'\n",
+    "                          , cols='text')\n",
     "                .split_from_df(col=2)\n",
     "                .label_from_df(cols=0)\n",
     "                .databunch())"
@@ -484,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -512,10 +517,11 @@
        " PosixPath('/home/ubuntu/.fastai/data/imdb/unsup'),\n",
        " PosixPath('/home/ubuntu/.fastai/data/imdb/train'),\n",
        " PosixPath('/home/ubuntu/.fastai/data/imdb/tmp_lm'),\n",
+       " PosixPath('/home/ubuntu/.fastai/data/imdb/data_lm.pkl'),\n",
        " PosixPath('/home/ubuntu/.fastai/data/imdb/imdb.vocab')]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +545,7 @@
        " PosixPath('/home/ubuntu/.fastai/data/imdb/train/labeledBow.feat')]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
